  unset options customized for a given URL pattern (such as after answering a
  prompt with "always"/"never").
- The `:config-unset` command now shows an error when used on an option which is
  valid, but was never customized.
- The `statusbar.widgets` setting now understands `text:...` entries which
  allows adding a hard-coded text to the statusbar.

Fixed
~~~~~

- When an editor exits with a != 0 exit status, the temporary editor file is now
  persisted. This already was the case when the editor crashed.
- When a nonexistent file gets passed to `--config-py`, qutebrowser now
  complains instead of silently not loading it.
- With some (rare) setups, opening the report dialog or using a PAC proxy with
  QtWebKit could result in qutebrowser hanging due to a PyQt bug. There's now a
  workaround which prevents the hang.
- QtWebEngine version detection (influencing things like dark mode settings or
  certain workarounds) now works correctly on OpenBSD.
- Certain version number formats in `/etc/os-release` caused qutebrowser to
  crash. Those are now handled correctly.
- The macOS releases now properly support Dark Mode for UI elements by setting
  `NSRequiresAquaSystemAppearance` to false.

Removed
~~~~~~~

- The `qute://spawn-output` page used by `:spawn -o` is now removed, as it's
  replaced by the new `qute://process` pages.

[[v2.1.1]]
v2.1.1 (2021-04-01)
-------------------

Added
~~~~~

- Site-specific quirk for krunker.io, which shows a "Socket Error" with
  qutebrowser's default Accept-Language header. The workaround is equivalent to
  doing `:set -u matchmaker.krunker.io content.headers.accept_language ""`.

Changed
~~~~~~~

- Clicking the 'x' in the devtools window to hide it now also leaves insert
  mode.

Fixed
~~~~~

- The workaround for black on (almost) black formula images in dark mode now
  also works with Qt 5.12 and 5.13.
- When running in Flatpak or with the Windows/macOS releases, the QtWebEngine